Added theme selection to the menu and "About" dialog. Improved serial configuration with tooltips and updated styles.

--- a/gui/resources/themes/gray.qss
+++ b/gui/resources/themes/gray.qss
@@ -1498,7 +1498,7 @@ QToolBox  {
     border: none;
 }
 
-QToolBox::tab { /* TODO */
+QToolBox::tab {
     color: #c9c8c7;
     background-color: #71706d;
     border: 1px transparent #51504d;
