Removed unused files and resources, added to `TimeSeriesPlot` auto-zoom toggle.

--- a/gui/resources/themes/dark_blue.qss
+++ b/gui/resources/themes/dark_blue.qss
@@ -422,80 +422,18 @@ QMenu::icon {
 }
 
 QMenu::indicator {
-  padding-left: 8px;
-  width: 12px;
-  height: 12px;
-  /* non-exclusive indicator = check box style indicator (see QActionGroup::setExclusive) */
-  /* exclusive indicator = radio button style indicator (see QActionGroup::setExclusive) */
+    width: 16px;
+    height: 16px;
+    padding-left: 4px;
+    font-family: "Segoe UI";
+    font-size: 12px;
 }
 
-QMenu::indicator:non-exclusive:unchecked {
-  image: url(":/qss_icons/dark/rc/checkbox_unchecked.png");
-}
-
-QMenu::indicator:non-exclusive:unchecked:hover, QMenu::indicator:non-exclusive:unchecked:focus, QMenu::indicator:non-exclusive:unchecked:pressed {
-  border: none;
-  image: url(":/qss_icons/dark/rc/checkbox_unchecked_focus.png");
-}
-
-QMenu::indicator:non-exclusive:unchecked:disabled {
-  image: url(":/qss_icons/dark/rc/checkbox_unchecked_disabled.png");
-}
 
 QMenu::indicator:non-exclusive:checked {
-  image: url(":/qss_icons/dark/rc/checkbox_checked.png");
-}
-
-QMenu::indicator:non-exclusive:checked:hover, QMenu::indicator:non-exclusive:checked:focus, QMenu::indicator:non-exclusive:checked:pressed {
-  border: none;
-  image: url(":/qss_icons/dark/rc/checkbox_checked_focus.png");
-}
-
-QMenu::indicator:non-exclusive:checked:disabled {
-  image: url(":/qss_icons/dark/rc/checkbox_checked_disabled.png");
-}
-
-QMenu::indicator:non-exclusive:indeterminate {
-  image: url(":/qss_icons/dark/rc/checkbox_indeterminate.png");
-}
-
-QMenu::indicator:non-exclusive:indeterminate:disabled {
-  image: url(":/qss_icons/dark/rc/checkbox_indeterminate_disabled.png");
-}
-
-QMenu::indicator:non-exclusive:indeterminate:focus, QMenu::indicator:non-exclusive:indeterminate:hover, QMenu::indicator:non-exclusive:indeterminate:pressed {
-  image: url(":/qss_icons/dark/rc/checkbox_indeterminate_focus.png");
-}
-
-QMenu::indicator:exclusive:unchecked {
-  image: url(":/qss_icons/dark/rc/radio_unchecked.png");
-}
-
-QMenu::indicator:exclusive:unchecked:hover, QMenu::indicator:exclusive:unchecked:focus, QMenu::indicator:exclusive:unchecked:pressed {
-  border: none;
-  outline: none;
-  image: url(":/qss_icons/dark/rc/radio_unchecked_focus.png");
-}
-
-QMenu::indicator:exclusive:unchecked:disabled {
-  image: url(":/qss_icons/dark/rc/radio_unchecked_disabled.png");
-}
-
-QMenu::indicator:exclusive:checked {
-  border: none;
-  outline: none;
-  image: url(":/qss_icons/dark/rc/radio_checked.png");
-}
-
-QMenu::indicator:exclusive:checked:hover, QMenu::indicator:exclusive:checked:focus, QMenu::indicator:exclusive:checked:pressed {
-  border: none;
-  outline: none;
-  image: url(":/qss_icons/dark/rc/radio_checked_focus.png");
-}
-
-QMenu::indicator:exclusive:checked:disabled {
-  outline: none;
-  image: url(":/qss_icons/dark/rc/radio_checked_disabled.png");
+    image: none;
+    font-weight: bold;
+    content: "✓";
 }
 
 QMenu::right-arrow {
